--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: java
 sudo: required
 jdk: openjdk8
 before_install:
-    - cd restaurant-manager
+    - cd sandwich-shop-manager
 after_success:
     - mvn jacoco:report coveralls:report
 cache:
